# plantspy

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: ads1115.c  ads1115.h  bus.c  bus.h  config.h.in  dht20.c  dht20.h  lwipopts.h  main.c  mqtt.c  mqtt.h  util.c  util.h
